--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         </div>
 
-        <div class="bx7">Em construção</div>
+        <div class="bx7">Em construção!</div>
         <!--<div class="bx8"></div>
         <div class="bx9"></div>
         <div class="bx10"></div>
